# autovec-impl-rs

./: Cargo.toml  README.md
autovec/: Cargo.toml
autovec/autovec_impl/: Cargo.toml
autovec/autovec_impl/src/: lib.rs
autovec/src/: lib.rs
src/: main.rs
