[package]
name = "autovec"
version = "0.1.0"
authors = ["PhotonQuantum <self@lightquantum.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.9"

[dependencies.autovec_impl]
path = "autovec_impl"

[workspace]
members = ["src/autovec_impl"]
